- remove rsync mirrors when calling aria2
- gurpmi, gurpmi2:
  o silence perl warnings (ie remove "use warnings")

Version 6.7 - 3 September 2008, Pascal "Pixel" Rigaux

- really call aria2 with --max-tries=1
  (it helps a lot when trying to download some files (eg: reconfig.urpmi))

Version 6.6 - 2 September 2008, Pascal "Pixel" Rigaux

- call aria2 with brand-new --uri-selector=adaptive

Version 6.5 - 1 September 2008, Pascal "Pixel" Rigaux

- all tools
  o use metalink/aria2 by default (when available) when using a mirrorlist
- urpmi, urpmq
  o do not display all substring matches on stderr, only a subset of them, and
    suggest to use "-a" to use all matches (#38956)
- urpmi
  o do not write useless "foo (obsoletes foo-xxx)" in
    installed-through-deps.list (#42167)
- urpmi.addmedia
  o instead of discarding --update when using --distrib, give it a meaning:
    only add media flagged "update"
  o handle $URPMI_ADDMEDIA_REASON 
    (special reason to give to api.mandriva.com/mirrors/... to allow statistics)
- gurpmi2
  o nicer default window size
  o render nicely under matchbox during install
  o handle --update

Version 6.4 - 14 August 2008, Thierry Vignaud

- gurpmi
  o fix exit code if canceling when requested to select a choice
  o fix exit code if refusing to insert the proper media
  o notify callers when installation is canceled (#40358)

Version 6.3 - 14 August 2008, Thierry Vignaud

- gurpmi
  o better handle closing dialogs
  o fix not asking questions on error

Version 6.2 - 7 August 2008, Thierry Vignaud

- gurpmi
  o handle --justdb and --noscripts
  o fix/manage --urpmi-root
- urpme
  o add --justdb
  o sort the list of orphans

Version 6.1 - 10 July 2008, by Pascal "Pixel" Rigaux

- all tools
  o fix broken ssh:// (regression introduced in 6.0)
- urpmi, urpme, urpmq:
  o fix orphans handling: suggested packages must not be detected as orphans
- urpmi:
  o handle README.urpmi in utf8 (but not other encodings) (#41553)
  o handle --debug-librpm