@@ -1,3 +1,4 @@
+- fix proxy parameter for aria2
 - remove rsync mirrors when calling aria2
 - gurpmi, gurpmi2:
   o silence perl warnings (ie remove "use warnings")
